Add APNs Live Activity broadcast channels
